# RUD-CLI

./: Cargo.toml  PRODUCTION.md  README.md  config.example.toml  setup.sh
crates/rud-aether/: Cargo.toml
crates/rud-aether/src/: fabric.rs  lib.rs  nre.rs  overlay.rs  qds.rs
crates/rud-ala/: Cargo.toml
crates/rud-ala/src/: agents.rs  bridge.rs  discovery.rs  lib.rs  transform.rs
crates/rud-cli/: Cargo.toml
crates/rud-cli/src/: cli.rs  commands.rs  daemon.rs  lib.rs  main.rs  tui.rs
crates/rud-core/: Cargo.toml
crates/rud-core/src/: config.rs  error.rs  lib.rs  metrics.rs  node.rs  prometheus_exporter.rs  protocol.rs  state.rs
crates/rud-ghost/: Cargo.toml
crates/rud-ghost/src/: cad.rs  esm.rs  lib.rs  nexus.rs  probe.rs
