[workspace]
members = [
    "crates/rud-core",
    "crates/rud-aether",
    "crates/rud-ghost",
    "crates/rud-ala",
    "crates/rud-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["RUD Team"]
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }

# CLI
clap = { version = "4", features = ["derive", "env", "unicode"] }

# TUI
ratatui = { version = "0.29" }
crossterm = { version = "0.28" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Shared memory / IPC
memmap2 = "0.9"

# Concurrency
dashmap = "6"
parking_lot = "0.12"
crossbeam-channel = "0.5"

# Networking / protocols  (MQTT simulation is done in pure Rust)

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Hashing / ring buffers
ring-channel = "0.9"

# Statistics (for anomaly detection)
statrs = "0.17"

# System info
sysinfo = "0.33"

# Random
rand = "0.8"

# Byte buffer
bytes = "1"
