[package]
name = "rud-ala"
version.workspace = true
edition.workspace = true

[dependencies]
rud-core = { path = "../rud-core" }
rud-aether = { path = "../rud-aether" }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
sysinfo = { workspace = true }
rand = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
