[package]
name = "rud-ala"
version.workspace = true
edition.workspace = true

[dependencies]
rud-core = { path = "../rud-core" }
rud-aether = { path = "../rud-aether" }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
sysinfo = { workspace = true }
rand = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
zenoh = { version = "1.0", features = ["shared-memory", "unstable"], optional = true }
rumqttc = { version = "0.24", optional = true }
# cyclonedds-rs = { version = "0.4", optional = true }
bytes = { workspace = true }
base64 = "0.22"

[features]
default = []
full-discovery = ["zenoh", "rumqttc"]
# ros2 = ["cyclonedds-rs"]  # Disabled due to build complexity
zenoh-discovery = ["zenoh"]
mqtt = ["rumqttc"]
