[package]
name = "rud-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "rud"
path = "src/main.rs"

[dependencies]
rud-core = { path = "../rud-core" }
rud-aether = { path = "../rud-aether" }
rud-ghost = { path = "../rud-ghost" }
rud-ala = { path = "../rud-ala" }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
sysinfo = { workspace = true }
rand = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
libc = "0.2"
