[package]
name = "rud-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
tokio = { workspace = true }

# Optional features
prometheus = { workspace = true, optional = true }
warp = { version = "0.3", optional = true }

[features]
default = []
prometheus = ["dep:prometheus", "dep:warp"]
